invalid_label_sym_sym_arg_keywords_test/invalid_label_sym_sym_arg_keywords_test_14.src
.IPPcode24
JUMPIFNEQ label2 int GF@b